--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#1e6aa4</color>
+    <color name="colorPrimaryDark">#ffffff</color> // Color ni yang kat top bar
+    <color name="colorAccent">#1e6aa4</color>
+
+    //Button
+    <color name="colorTransparent">#00000000</color>
+    <color name="disable">#DDDDDD</color>
+
+    //Text
+    <color name="textColorPrimaryDark">#2c2c2c</color>
+    <color name="textColorPrimary">#4b4b4c</color>
+    <color name="textColorAccent">#808080</color>
+
+    //Recycler
+    <color name="defaultRecyclerColor">#f4f4f4</color>
+
+    //Others
+    <color name="white">#ffffff</color>
+    <color name="green">#10800C</color>
+    <color name="yellow">#E4921F</color>
+    <color name="red">#941512</color>
 </resources>
